--- a/locales/en.yml
+++ b/locales/en.yml
@@ -12,3 +12,6 @@ intro:
   aka: Also known as
   whats-your-name: What's your name?
 not-found: Not found
+title:
+  projects: Projects
+  blogs: Blogs
